--- a/views/partials/manual-attendance.ejs
+++ b/views/partials/manual-attendance.ejs
@@ -31,14 +31,14 @@
           <label for="start">
             Select Start Time
             <div class="time-picker">
-              <input type="text" class="timepicker-ui-input"  name="start" />
+              <input type="text" class="timepicker-ui-input" placeholder="00:00"  name="start" />
               <p class="error end-error"></p>
             </div>
           </label>
           <label for="end">
             Select End Time
             <div class="time-picker">
-              <input type="text" class="timepicker-ui-input"  name="end" />
+              <input type="text" class="timepicker-ui-input"  placeholder="00:00" name="end" />
               <p class="error end-error"></p>
             </div>
           </label>
