--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -1,4 +1,38 @@
 <%- include("../partials/header"); -%>
+<style>
+.loader .hide-button-text {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.loader::after {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  border: 4px solid transparent;
+  border-top-color: #ffffff;
+  border-radius: 50%;
+  animation: button-loading-spinner 1s ease infinite;
+}
+
+@keyframes button-loading-spinner {
+  from {
+    transform: rotate(0turn);
+  }
+
+  to {
+    transform: rotate(1turn);
+  }
+}
+
+
+</style>
 <div id="users">
   <div class="text-head">
     <div class="text-title">Users</div>
