--- a/views/partials/add-request-leave-modal.ejs
+++ b/views/partials/add-request-leave-modal.ejs
@@ -15,7 +15,7 @@
                 <option disabled selected>Select Type</option>
                 <% leaveTypeList.map(el =>
                 {%>
-                <option value="<%= el.id %>"><%= el.name %> (<%= el.duration%>)</option>
+                <option value="<%= el.id %>"><%= el.name %> </option>
 
                 <% }) %>
               </select>
