--- a/views/partials/add-user-modal.ejs
+++ b/views/partials/add-user-modal.ejs
@@ -73,14 +73,15 @@
 </div>
 <script>
   function readURL(input) {
-  if (input.files && input.files[0]) {
-    const reader = new FileReader();
-    console.log(reader);
-    reader.onload = function (e) {
-      console.log(e);
-      document.querySelector('#img').setAttribute('src', e.target.result);
-    };
-    reader.readAsDataURL(input.files[0]);
+    if (input.files && input.files[0]) {
+      const reader = new FileReader();
+      console.log(reader);
+      reader.onload = function (e) {
+        console.log(e);
+        document.querySelector("#img").setAttribute("src", e.target.result);
+      };
+      reader.readAsDataURL(input.files[0]);
+    }
   }
-}  
+
 </script>
