update leave functionality

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -127,7 +127,7 @@
   color: var(--white);
   padding: 5px 8px;
   font-size: 14px;
-  background-color: var(--deep2);
+  background-color: var(--deep);
   border-radius: 5px;
 }
 .request-view:hover{
