--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -74,7 +74,12 @@
                 </li>
                 <li>
                   <a href="/update-user/<%= user.id %>">
-                    <span>Update</span>
+                    <span>Profile</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="/options/leavedays/<%= user.id %>">
+                    <span>Leave</span>
                   </a>
                 </li>
 
