--- a/views/partials/add-user-modal.ejs
+++ b/views/partials/add-user-modal.ejs
@@ -57,7 +57,7 @@
           <label for="phone">
             Phone
             <div class="">
-              <input type="number" name="phone" id="phone" />
+              <input type="tel" name="phone" id="phone" />
               <p class="error phone-error"></p>
             </div>
           </label>
