update leaveday js

--- a/views/pages/leavedays.ejs
+++ b/views/pages/leavedays.ejs
@@ -147,6 +147,7 @@
     </div>
   </div>
 <input type="hidden" id="id" value="<%=userId%>" >
+<input type="hidden" id="role" value="<%=loggedInUser.userRole%>" >
   <!-- Markup for leave days table  -->
   <div class="scroll-table">
     <table class="table leaveday-table">
