--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -202,7 +202,7 @@
     </div>
     <div class="card">
       <div>
-        <div class="numbers">4455</div>
+        <div class="numbers"><%=totalLeaveToDay%> </div>
         <div class="card-name">Leave Users</div>
       </div>
       <div class="icon-box">
